# ddf24

./: .gitignore  README.md  pyproject.toml
src/: cli.py  code_complexity.py  complexity.py  normalization.py  predict.py  test.py  tools.py
src/index/: asthash.py  top_k.py
src/model/: aggregate.py  binary_classification.py  model.m
src/sim_alg/: ast.py  asthash.py  binary_classification.py  cli.py  code_complexity.py  lcs.py  levenshtein.py  normalization.py  preproc.py  simple_ast.py  tools.py  top_k.py
