[tool.poetry]
name = "ddf24"
version = "0.1.0"
description = ""
authors = ["Rudovich Kirill <Rudovichkirill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
levenshtein = "^0.26.1"
numpy = "^2.1.3"
pycode-similar = "^1.4"
zss = "^1.2.0"
chardet = "^5.2.0"
vulture = "^2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
